# backend/src/main/java/io/github/ctrl_alt_elite/hackathon/controllers/PingApi.java
@@ -31,7 +31,7 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-11-14T16:27:56.911444+03:00[Europe/Moscow]", comments = "Generator version: 7.8.0")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-11-14T21:26:26.707264+03:00[Europe/Moscow]", comments = "Generator version: 7.8.0")
 @Validated
 @Tag(name = "Ping", description = "Tag for ping operation")
 public interface PingApi {
@@ -39,6 +39,55 @@ public interface PingApi {
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
+
+    /**
+     * GET /v1/auth/ping : Ping with authentification
+     * Return pong if you are authentificated
+     *
+     * @return pong (status code 200)
+     *         or Unauthorized (status code 401)
+     */
+    @Operation(
+        operationId = "authPong",
+        summary = "Ping with authentification",
+        description = "Return pong if you are authentificated",
+        tags = { "Ping" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "pong", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = String.class))
+            })
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/v1/auth/ping",
+        produces = { "application/json" }
+    )
+    
+    default ResponseEntity<String> authPong(
+        
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"pong\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "\"error\"";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
 
     /**
      * GET /v1/ping : Check if server is alive
