# backend/src/main/resources/openapi.yaml
@@ -8,6 +8,13 @@ info:
 
 components:
 #   schemas:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+      description: JWT токен для аутентификации
+
   parameters:
     Address:
       name: Address
@@ -19,6 +26,14 @@ components:
         example: "0x35686896756"
 
   responses:
+    200Pong:
+      description: pong
+      content:
+        application/json:
+          schema:
+            type: string
+            example: "pong"
+
     400BadRequest:
       description: Bad Request
       content:
@@ -34,6 +49,9 @@ components:
           schema:
             type: string
             example: error
+
+security:
+  - bearerAuth: []
 
 tags:
   - name: Ping
@@ -51,12 +69,22 @@ paths:
       operationId: pong
       responses:
         200:
-          description: pong
-          content:
-            application/json:
-              schema:
-                type: string
-                example: "pong"
+          $ref: '#/components/responses/200Pong'
+
+  /v1/auth/ping:
+    get:
+      tags:
+        - "Ping"
+      summary: "Ping with authentification"
+      description: "Return pong if you are authentificated"
+      operationId: authPong
+      security:
+        - bearerAuth: []
+      responses:
+        200:
+          $ref: '#/components/responses/200Pong'
+        401:
+          $ref: '#/components/responses/401Unauthorized'
 
   /v1/auth/nonce:
     get:
